hot fix for lighter project

--- a/light/index.html
+++ b/light/index.html
@@ -30,11 +30,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/buildvr1.loader.js";
+      var loaderUrl = buildUrl + "/light.loader.js";
       var config = {
-        dataUrl: buildUrl + "/buildvr1.data.unityweb",
-        frameworkUrl: buildUrl + "/buildvr1.framework.js.unityweb",
-        codeUrl: buildUrl + "/buildvr1.wasm.unityweb",
+        dataUrl: buildUrl + "/light.data.unityweb",
+        frameworkUrl: buildUrl + "/light.framework.js.unityweb",
+        codeUrl: buildUrl + "/light.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "webXR",
